# 4_en_linea

./: CMakeLists.txt  README.md
include/: App.hh  Color.hh  ConfNuevoJuego.hh  Controlador.hh  DialogoEmpate.hh  DialogoGanador.hh  EstadoJuego.hh  IJugador.hh  Ijugador.hh  JugadorDificil.hh  JugadorFacil.hh  JugadorHumano.hh  MainFrame.hh  Tablero.hh  TableroGUI.hh  VistaJuego.hh
src/: App.cpp  CMakeLists.txt  ConfNuevoJuego.cpp  Controlador.cpp  DialogoEmpate.cpp  DialogoGanador.cpp  EstadoJuego.cpp  Ijugador.cpp  JugadorDificil.cpp  JugadorFacil.cpp  JugadorHumano.cpp  MainConsola.cpp  MainFrame.cpp  Tablero.cpp  TableroGUI.cpp  VistaJuego.cpp  main.cpp  mainFrame.cpp
tests/: CMakeLists.txt  test_Estados.cpp  test_JugadorDificil.cpp  test_JugadorFacil.cpp  test_Tablero.cpp
